sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/tandoor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tandoor
  labels:
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/instance: tandoor
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tandoor
      app.kubernetes.io/instance: tandoor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tandoor
        app.kubernetes.io/instance: tandoor
    spec:
      restartPolicy: Always
      serviceAccountName: tandoor-sa
      containers:
        - name: recipes
          image: ghcr.io/tandoorrecipes/recipes:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /accounts/login/
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 120
          resources:
            requests:
              cpu: 100m
              memory: 1200Mi
          volumeMounts:
            - mountPath: /opt/recipes/mediafiles
              name: media
              subPath: files
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: recipes-media
