sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/tandoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tandoor
  labels:
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/instance: tandoor
spec:
  selector:
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/instance: tandoor
  ports:
  - port: 80
    targetPort: http
    name: http
    protocol: TCP
  - port: 8080
    targetPort: 8080
    name: gunicorn
    protocol: TCP
