sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/tandoor/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tandoor
  namespace: tandoor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tandoor
      app.kubernetes.io/instance: tandoor
  ingress:
    # Allow traffic from Traefik Private
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    # Allow DNS lookups
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # Allow connections to Vault
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
            app.kubernetes.io/name: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    # Allow connections to Postgres (CNPG)
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: tandoor-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow intra-namespace communication
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tandoor
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tandoor-db
  namespace: tandoor
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: tandoor-db
  ingress:
    # Allow traffic from Tandoor app
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tandoor
            app.kubernetes.io/instance: tandoor
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow intra-cluster DB communication
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: tandoor-db
    # Allow traffic from CloudNativePG operator for health checks
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "5432"
              protocol: TCP
    # Allow VictoriaMetrics to scrape metrics
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # Allow intra-cluster DB communication
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: tandoor-db
    # Allow access to K8s API
    - toEntities:
        - kube-apiserver
    # Allow egress to S3 for Barman backups
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
